amyc/src/test/resources/amyc/parser/failing/ArgsError2.grading.amy
object Args
  foo(bar baz)
end Args
